statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: default

spec:
  serviceName: db-svc
  replicas: 1
  selector:
    matchLabels:
      app: app-db

  template:
    metadata:
      labels:
        app: app-db

    spec:
      containers:
        - name: db-cont
          image: sukumar722/php:db-image
          ports:
            - containerPort: 3306

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          volumeMounts:
            - name: pvc-1
              mountPath: /var/lib/mysql

  volumeClaimTemplates:
    - metadata:
        name: pvc-1
      spec:
        storageClassName: gp2
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
